Archive Product: Customize product loop detail

--- a/wp-content/themes/ss_woo/assets/css/custom.css
+++ b/wp-content/themes/ss_woo/assets/css/custom.css
@@ -37,3 +37,14 @@ body.admin_bar {
 ins {
     text-decoration: none;
 }
+
+.block2-btn-addcart {
+    text-align: center;
+    margin: auto;
+}
+
+.block2-btn-addcart .added_to_cart {
+    color: #fff;
+    font-size: small;
+    font-weight: 500;
+}
